--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,9 +62,10 @@
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
-  bottom: 50px;
+  bottom: 0px;
   left: 0px;
   transition: 0.1s;
+  padding: 16px 0;
 }
 
 .hover-item:hover .fixed_name {
