--- a/src/containers/Mentorship/styles.css
+++ b/src/containers/Mentorship/styles.css
@@ -97,7 +97,8 @@ body.modal-open {
 }
 .mentors-title li{
   margin-bottom: 0.3rem;
-  font-weight: 400;
+  font-weight: 500;
+  color: #211f26;
   font-family: Lato;
   font-size: 16px;
 }
