Update AI expert network

--- a/src/containers/Mentorship/styles.css
+++ b/src/containers/Mentorship/styles.css
@@ -193,7 +193,8 @@ body.modal-open {
   height: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
   .mentors-name{
     font-size: 1rem;;
@@ -297,6 +298,7 @@ body.modal-open {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
 }
   
   .item-speakers {
