--- a/src/containers/Fee/styles.scss
+++ b/src/containers/Fee/styles.scss
@@ -20,3 +20,12 @@
     #tuition_fee{padding-top: 64px;}
 }
 
+.scholarship-box{
+    border-top: solid 10px #731013;
+    border-left: solid 2px #731013;
+    border-right: solid 2px #731013;
+    border-bottom: solid 2px #731013;
+    border-radius: 0.5rem;
+    padding:2rem 4rem;
+    text-align: left;
+}
